k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spd-milestones
  labels:
    name: spd-milestones
    app: spd-milestones
